--- a/APIDocumentation/APIDocumentation.csproj
+++ b/APIDocumentation/APIDocumentation.csproj
@@ -96,6 +96,8 @@
   <ItemGroup>
     <Content Include="architecture-en.html" />
     <Content Include="cvp-documentation-en.html" />
+    <Content Include="dhpr-dataset-en.html" />
+    <Content Include="dhpr-documentation-en.html" />
     <Content Include="distro\4.0.20\assets\cloud-popup-relative.png" />
     <Content Include="distro\4.0.20\assets\favicon-mobile.png" />
     <Content Include="distro\4.0.20\assets\favicon.ico" />
