Change api-vi to api because the versionning will be done at the server level.

--- a/APIDocumentation/APIDocumentation.csproj
+++ b/APIDocumentation/APIDocumentation.csproj
@@ -561,12 +561,13 @@
     <Content Include="api-en.html" />
     <Content Include="cvp-dataset-en.html" />
     <Content Include="dpd-dataset-en.html" />
+    <Content Include="lnhpd-documentation-en.html" />
     <Content Include="mdall-documentation-en.html" />
     <Content Include="dpd-documentation-en.html" />
     <Content Include="image\architecture-diagram.bmp" />
     <Content Include="js\dhpr.js" />
     <Content Include="js\jquery.xdomainrequest.min.js" />
-    <Content Include="lnhpd-api-en.html" />
+    <Content Include="lnhpd-dataset-en.html" />
     <Content Include="mdall-dataset-en.html" />
     <Content Include="packages.config" />
     <Content Include="distro\4.0.20\fonts\glyphicons-halflings-regular.eot" />
