--- a/APIDocumentation/APIDocumentation.csproj
+++ b/APIDocumentation/APIDocumentation.csproj
@@ -95,6 +95,8 @@
   </ItemGroup>
   <ItemGroup>
     <Content Include="architecture-en.html" />
+    <Content Include="cta-dataset-en.html" />
+    <Content Include="cta-documentation-en.html" />
     <Content Include="dhpr-dataset-en.html" />
     <Content Include="cvp-documentation-en.html" />
     <Content Include="dhpr-documentation-en.html" />
@@ -569,6 +571,8 @@
     <Content Include="js\jquery.xdomainrequest.min.js" />
     <Content Include="lnhpd-dataset-en.html" />
     <Content Include="mdall-dataset-en.html" />
+    <Content Include="noc-dataset-en.html" />
+    <Content Include="noc-documentation-en.html" />
     <Content Include="packages.config" />
     <Content Include="distro\4.0.20\fonts\glyphicons-halflings-regular.eot" />
     <Content Include="distro\4.0.20\fonts\glyphicons-halflings-regular.ttf" />
