Added the JSONtoCSV javascript.

--- a/APIDocumentation/APIDocumentation.csproj
+++ b/APIDocumentation/APIDocumentation.csproj
@@ -563,6 +563,7 @@
     <Content Include="api-en.html" />
     <Content Include="cvp-dataset-en.html" />
     <Content Include="dpd-dataset-en.html" />
+    <Content Include="js\JSONtoCSV.js" />
     <Content Include="lnhpd-documentation-en.html" />
     <Content Include="mdall-documentation-en.html" />
     <Content Include="dpd-documentation-en.html" />
