Added support for IE 10+ for JSON to CSV download

--- a/APIDocumentation/APIDocumentation.csproj
+++ b/APIDocumentation/APIDocumentation.csproj
@@ -609,6 +609,105 @@
     <Content Include="distro\4.0.20\wet-boew\js\polyfills\slider_wrapper.min.js.map" />
     <Content Include="distro\4.0.20\wet-boew\js\polyfills\svg.min.js.map" />
     <Content Include="distro\4.0.20\wet-boew\js\wet-boew.min.js.map" />
+    <Content Include="scripts\Stuk-jszip-5250332\.codeclimate.yml" />
+    <Content Include="scripts\Stuk-jszip-5250332\.editorconfig" />
+    <Content Include="scripts\Stuk-jszip-5250332\.jshintignore" />
+    <Content Include="scripts\Stuk-jszip-5250332\.jshintrc" />
+    <Content Include="scripts\Stuk-jszip-5250332\.npmignore" />
+    <Content Include="scripts\Stuk-jszip-5250332\.travis.yml" />
+    <Content Include="scripts\Stuk-jszip-5250332\bower.json" />
+    <Content Include="scripts\Stuk-jszip-5250332\CHANGES.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\component.json" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\constructor.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\external.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\file_data.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\file_name.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\file_regex.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\filter.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\folder_data.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\folder_regex.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\for_each.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\generate_async.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\generate_internal_stream.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\generate_node_stream.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\load_async.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\load_async_object.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\remove.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\support.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_jszip\version.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_streamhelper.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_streamhelper\accumulate.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_streamhelper\on.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_streamhelper\pause.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_streamhelper\resume.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_zipobject.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_zipobject\async.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_zipobject\internal_stream.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\api_zipobject\node_stream.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\contributing.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\examples.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\faq.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\howto\read_zip.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\howto\write_zip.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\limitations.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\upgrade_guide.md" />
+    <Content Include="scripts\Stuk-jszip-5250332\LICENSE.markdown" />
+    <Content Include="scripts\Stuk-jszip-5250332\package.json" />
+    <Content Include="scripts\Stuk-jszip-5250332\README.markdown" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\all-stream.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\all.7zip.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\all.windows.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\all.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\all_appended_bytes.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\all_missing_bytes.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\all_prepended_bytes.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\archive_comment.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\backslash.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\complex_files\AntarcticaTemps.ods" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\complex_files\AntarcticaTemps.xlsx" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\complex_files\Franz Kafka - The Metamorphosis.epub" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\complex_files\Outlook2007_Calendar.xps" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\data_descriptor.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\deflate-stream.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\deflate.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\empty.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\encrypted.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\extra_attributes.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\folder.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\image.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\invalid\bad_decompressed_size.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\invalid\bad_offset.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\invalid\compression.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\invalid\crc32.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\local_encoding_in_name.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\nested.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\nested_data_descriptor.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\nested_zip64.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\permissions\linux_7z.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\permissions\linux_ark.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\permissions\linux_file_roller-ubuntu.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\permissions\linux_file_roller-xubuntu.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\permissions\linux_zip.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\permissions\mac_finder.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\permissions\windows_7z.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\permissions\windows_compressed_folders.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\permissions\windows_izarc.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\permissions\windows_winrar.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\pile_of_poo.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\slashes_and_izarc.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\store-stream.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\store.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\subfolder.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\text.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\utf8.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\utf8_in_name.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\winrar_utf8_in_name.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\zip64.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\zip64_appended_bytes.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\zip64_missing_bytes.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\ref\zip64_prepended_bytes.zip" />
+    <Content Include="scripts\Stuk-jszip-5250332\_config.yml" />
     <None Include="Web.Debug.config">
       <DependentUpon>Web.config</DependentUpon>
     </None>
@@ -622,6 +721,78 @@
     <Content Include="data-source-en.html" />
     <Content Include="framework-en.html" />
     <Content Include="index-en.html" />
+    <Content Include="scripts\Stuk-jszip-5250332\.gitignore" />
+    <Content Include="scripts\Stuk-jszip-5250332\dist\jszip.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\dist\jszip.min.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\docs\APPNOTE.TXT" />
+    <Content Include="scripts\Stuk-jszip-5250332\docs\references.txt" />
+    <Content Include="scripts\Stuk-jszip-5250332\docs\ZIP spec.txt" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\css\main.css" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\css\pygments.css" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\examples\download-zip-file.html" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\examples\downloader.html" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\examples\downloader.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\examples\get-binary-files-ajax.html" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\examples\read-local-file-api.html" />
+    <Content Include="scripts\Stuk-jszip-5250332\documentation\_layouts\default.html" />
+    <Content Include="scripts\Stuk-jszip-5250332\Gruntfile.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\index.html" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\base64.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\compressedObject.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\compressions.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\crc32.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\defaults.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\external.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\flate.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\generate\index.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\generate\ZipFileWorker.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\index.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\license_header.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\load.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\nodejsUtils.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\nodejs\NodejsStreamInputAdapter.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\nodejs\NodejsStreamOutputAdapter.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\object.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\readable-stream-browser.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\reader\ArrayReader.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\reader\DataReader.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\reader\NodeBufferReader.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\reader\readerFor.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\reader\StringReader.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\reader\Uint8ArrayReader.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\signature.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\stream\ConvertWorker.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\stream\Crc32Probe.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\stream\DataLengthProbe.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\stream\DataWorker.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\stream\GenericWorker.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\stream\StreamHelper.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\support.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\utf8.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\utils.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\zipEntries.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\zipEntry.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\lib\zipObject.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\constructor.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\delete.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\deprecated.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\external.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\file.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\filter.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\foreach.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\generate.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\load.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\permissions.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\stream.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\unicode.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\asserts\version.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\helpers\browser-test-utils.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\helpers\node-test-utils.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\helpers\test-utils.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\index.html" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\jquery-1.8.3.min.js" />
+    <Content Include="scripts\Stuk-jszip-5250332\test\smile.gif" />
+    <Content Include="scripts\Stuk-jszip-5250332\vendor\FileSaver.js" />
     <Content Include="summary-report-dataset-en.html" />
     <Content Include="summary-report-documentation-en.html" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
