Added French versions of each page, directed all of the links to the proper French pages (hopefully).
Page content still in English

--- a/APIDocumentation/APIDocumentation.csproj
+++ b/APIDocumentation/APIDocumentation.csproj
@@ -94,11 +94,22 @@
     <Reference Include="System.EnterpriseServices" />
   </ItemGroup>
   <ItemGroup>
+    <Content Include="api-fr.html" />
+    <Content Include="application-fr.html" />
+    <Content Include="architecture-fr.html" />
     <Content Include="architecture-en.html" />
+    <Content Include="contact-us-fr.html" />
+    <Content Include="cta-dataset-fr.html" />
     <Content Include="cta-dataset-en.html" />
+    <Content Include="cta-documentation-fr.html" />
     <Content Include="cta-documentation-en.html" />
+    <Content Include="cvp-dataset-fr.html" />
+    <Content Include="cvp-documentation-fr.html" />
+    <Content Include="data-source-fr.html" />
+    <Content Include="dhpr-dataset-fr.html" />
     <Content Include="dhpr-dataset-en.html" />
     <Content Include="cvp-documentation-en.html" />
+    <Content Include="dhpr-documentation-fr.html" />
     <Content Include="dhpr-documentation-en.html" />
     <Content Include="distro\4.0.20\assets\cloud-popup-relative.png" />
     <Content Include="distro\4.0.20\assets\favicon-mobile.png" />
@@ -562,9 +573,16 @@
     <Content Include="distro\4.0.20\wet-boew\License-en.txt" />
     <Content Include="api-en.html" />
     <Content Include="cvp-dataset-en.html" />
+    <Content Include="dpd-dataset-fr.html" />
     <Content Include="dpd-dataset-en.html" />
+    <Content Include="dpd-documentation-fr.html" />
+    <Content Include="framework-fr.html" />
+    <Content Include="index-fr.html" />
     <Content Include="js\JSONtoCSV.js" />
+    <Content Include="lnhpd-dataset-fr.html" />
     <Content Include="lnhpd-documentation-en.html" />
+    <Content Include="mdall-dataset-fr.html" />
+    <Content Include="mdall-documentation-fr.html" />
     <Content Include="mdall-documentation-en.html" />
     <Content Include="dpd-documentation-en.html" />
     <Content Include="image\architecture-diagram.bmp" />
@@ -572,7 +590,9 @@
     <Content Include="js\jquery.xdomainrequest.min.js" />
     <Content Include="lnhpd-dataset-en.html" />
     <Content Include="mdall-dataset-en.html" />
+    <Content Include="noc-dataset-fr.html" />
     <Content Include="noc-dataset-en.html" />
+    <Content Include="noc-documentation-fr.html" />
     <Content Include="noc-documentation-en.html" />
     <Content Include="packages.config" />
     <Content Include="distro\4.0.20\fonts\glyphicons-halflings-regular.eot" />
@@ -793,10 +813,13 @@
     <Content Include="scripts\Stuk-jszip-5250332\test\jquery-1.8.3.min.js" />
     <Content Include="scripts\Stuk-jszip-5250332\test\smile.gif" />
     <Content Include="scripts\Stuk-jszip-5250332\vendor\FileSaver.js" />
+    <Content Include="summary-report-dataset-fr.html" />
     <Content Include="summary-report-dataset-en.html" />
+    <Content Include="summary-report-documentation-fr.html" />
     <Content Include="summary-report-documentation-en.html" />
     <Content Include="scripts\ai.0.15.0-build58334.js" />
     <Content Include="scripts\ai.0.15.0-build58334.min.js" />
+    <Content Include="terms-of-service-fr.html" />
     <Content Include="terms-of-service-en.html" />
     <Content Include="Web.config" />
   </ItemGroup>
