Added 3 template pages for indices, documentations, and datasets.

--- a/APIDocumentation/APIDocumentation.csproj
+++ b/APIDocumentation/APIDocumentation.csproj
@@ -577,11 +577,31 @@
     <Content Include="dpd-dataset-en.html" />
     <Content Include="dpd-documentation-fr.html" />
     <Content Include="framework-fr.html" />
+    <Content Include="StaticFallbackFiles\gcweb\footer-en.html" />
+    <Content Include="StaticFallbackFiles\gcweb\footer-fr.html" />
+    <Content Include="StaticFallbackFiles\gcweb\prefooter-en.html" />
+    <Content Include="StaticFallbackFiles\gcweb\prefooter-fr.html" />
+    <Content Include="StaticFallbackFiles\gcweb\refTop.html" />
+    <Content Include="StaticFallbackFiles\gcweb\secMenu-en.html" />
+    <Content Include="StaticFallbackFiles\gcweb\secMenu-fr.html" />
+    <Content Include="StaticFallbackFiles\gcweb\secMenuTop-en.html" />
+    <Content Include="StaticFallbackFiles\gcweb\secMenuTop-fr.html" />
+    <Content Include="StaticFallbackFiles\gcweb\splash.html" />
+    <Content Include="StaticFallbackFiles\gcweb\splashTop.html" />
+    <Content Include="StaticFallbackFiles\gcweb\top-en.html" />
+    <Content Include="StaticFallbackFiles\gcweb\top-fr.html" />
+    <Content Include="StaticFallbackFiles\gcweb\transactFooter-en.html" />
+    <Content Include="StaticFallbackFiles\gcweb\transactFooter-fr.html" />
+    <Content Include="StaticFallbackFiles\gcweb\transactTop-en.html" />
+    <Content Include="StaticFallbackFiles\gcweb\transactTop-fr.html" />
+    <Content Include="templateDataset.html" />
+    <Content Include="templateIndex.html" />
     <Content Include="index-fr.html" />
     <Content Include="js\JSONtoCSV.js" />
     <Content Include="lnhpd-dataset-fr.html" />
     <Content Include="lnhpd-documentation-en.html" />
     <Content Include="mdall-dataset-fr.html" />
+    <Content Include="templateDocumentation.html" />
     <Content Include="mdall-documentation-fr.html" />
     <Content Include="mdall-documentation-en.html" />
     <Content Include="dpd-documentation-en.html" />
