Added templated versions of api-en, application-en, architecture-en, contact-us-en, terms-of-service-en, and index-en

--- a/APIDocumentation/APIDocumentation.csproj
+++ b/APIDocumentation/APIDocumentation.csproj
@@ -595,7 +595,14 @@
     <Content Include="StaticFallbackFiles\gcweb\transactTop-en.html" />
     <Content Include="StaticFallbackFiles\gcweb\transactTop-fr.html" />
     <Content Include="templateDataset.html" />
+    <Content Include="architecture-en-templateIndex.html" />
+    <Content Include="contact-us-en-templateIndex.html" />
+    <Content Include="framework-en-templateIndex.html" />
+    <Content Include="index-en-templateIndex.html" />
+    <Content Include="terms-of-service-en-templateIndex.html" />
     <Content Include="templateIndex.html" />
+    <Content Include="application-en-templateIndex.html" />
+    <Content Include="api-en-templateIndex.html" />
     <Content Include="index-fr.html" />
     <Content Include="js\JSONtoCSV.js" />
     <Content Include="lnhpd-dataset-fr.html" />
