Added mdel datasets

--- a/APIDocumentation/APIDocumentation.csproj
+++ b/APIDocumentation/APIDocumentation.csproj
@@ -577,6 +577,10 @@
     <Content Include="dpd-dataset-en.html" />
     <Content Include="dpd-documentation-fr.html" />
     <Content Include="framework-fr.html" />
+    <Content Include="mdel-dataset-en.html" />
+    <Content Include="mdel-dataset-fr.html" />
+    <Content Include="mdel-documentation-en.html" />
+    <Content Include="mdel-documentation-fr.html" />
     <Content Include="StaticFallbackFiles\gcweb\footer-en.html" />
     <Content Include="StaticFallbackFiles\gcweb\footer-fr.html" />
     <Content Include="StaticFallbackFiles\gcweb\prefooter-en.html" />
