cnf documentation pages by Jocelyne

--- a/APIDocumentation/APIDocumentation.csproj
+++ b/APIDocumentation/APIDocumentation.csproj
@@ -97,6 +97,8 @@
     <Content Include="api-fr.html" />
     <Content Include="bin\APIDocumentation.dll" />
     <Content Include="bin\APIDocumentation.pdb" />
+    <Content Include="cnf-documentation-en.html" />
+    <Content Include="cnf-documentation-fr.html" />
     <Content Include="cta-dataset-fr.html" />
     <Content Include="cta-dataset-en.html" />
     <Content Include="cta-documentation-fr.html" />
